--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "install": "^0.13.0",
     "langchain": "^0.3.9",
     "npm": "^11.0.0",
+    "readline": "^1.3.0",
     "zod": "^3.24.1"
   }
 }
