--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@langchain/community": "^0.3.23",
     "@langchain/core": "^0.3.27",
     "@langchain/openai": "^0.3.16",
+    "@upstash/redis": "^1.34.3",
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.7",
     "install": "^0.13.0",
